# Group-Chat-System

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md
client/: main.cpp
logs/: client_log.txt  server_log.txt
server/: group_manager.cpp  main.cpp  thread_pool.cpp
shared/: cache.h  protocol.h  utils.h
